# test10_dbus

./: CMakeLists.txt  README.md  utils.hpp
dBusService/: CMakeLists.txt  dBusService.cpp  dBusService.hpp  dbusBase.hpp  info.xml  script.sh
dBusService/Logger/: Logger.c  Logger.h
dBusService/ObjEcho/: CMakeLists.txt  ObjEcho-adaptor.h  ObjEcho.cpp  ObjEcho.hpp  echo-introspect.xml
dBusService/ObjKeyboard/: CMakeLists.txt  ObjKeyboard-adaptor.h  ObjKeyboard.cpp  ObjKeyboard.hpp  keyboard-introspect.xml
dBusService/ObjKeyboard/KeyboardDriver/: captureKeyboard.c  captureKeyboard.h
desktopNotifyer/: dbus_con copy.cpp  dbus_con copy.hpp  dbus_con.cpp  dbus_con.hpp  desktopNotifyer.cpp  desktopNotifyer.hpp  genInterface.sh  org.freedesktop.Notifications.xml  org.freedesktop.NotificationsSimple.xml  org_freedesktop_NotificationsSimple.h
mainPro/: mainPro.cpp  mainPro.hpp  procStarter.cpp  procStarter.hpp
serviceClient/: DbusClient.cpp  DbusClient.hpp  echo-introspect.h  echo-introspect.xml  serviceClient.cpp  serviceClient.hpp
serviceServer/: DbusServer.cpp  DbusServer.hpp  echo-introspect.h  echo-introspect.xml  serviceServer.cpp  serviceServer.hpp
